commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44779,6 +44779,10 @@
     {
       "Date": "2022-11-08 01:00",
       "Rate": "19.4886"
+    },
+    {
+      "Date": "2022-11-08 02:00",
+      "Rate": "19.4375"
     }
   ]
 }
