commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44783,6 +44783,10 @@
     {
       "Date": "2022-11-08 02:00",
       "Rate": "19.4375"
+    },
+    {
+      "Date": "2022-11-08 03:00",
+      "Rate": "19.4460"
     }
   ]
 }
