--- a/indexRt.html
+++ b/indexRt.html
@@ -44787,6 +44787,10 @@
     {
       "Date": "2022-11-08 03:00",
       "Rate": "19.4460"
+    },
+    {
+      "Date": "2022-11-08 04:00",
+      "Rate": "19.4450"
     }
   ]
 }
