--- a/indexRt.html
+++ b/indexRt.html
@@ -44791,6 +44791,10 @@
     {
       "Date": "2022-11-08 04:00",
       "Rate": "19.4450"
+    },
+    {
+      "Date": "2022-11-08 05:00",
+      "Rate": "19.4596"
     }
   ]
 }
