--- a/indexRt.html
+++ b/indexRt.html
@@ -44795,6 +44795,10 @@
     {
       "Date": "2022-11-08 05:00",
       "Rate": "19.4596"
+    },
+    {
+      "Date": "2022-11-08 06:00",
+      "Rate": "19.4733"
     }
   ]
 }
