--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.810725,
-  "buy": 19.0708,
-  "date": "2022-11-08 10:40:10",
-  "prev_buy": 19.794445,
-  "prev_sell": 19.062862
+  "sell": 19.80024475,
+  "buy": 19.069526,
+  "date": "2022-11-08 10:50:11",
+  "prev_buy": 19.814388,
+  "prev_sell": 19.081874
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.713375,
-  "buy": 19.1681,
-  "date": "2022-11-08 10:40:13",
-  "prev_buy": 19.69565625,
-  "prev_sell": 19.159038
+  "sell": 19.70294625,
+  "buy": 19.1668195,
+  "date": "2022-11-08 10:50:14",
+  "prev_buy": 19.71702,
+  "prev_sell": 19.1792305
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.8594,
-  "buy": 19.0708,
-  "date": "2022-11-08 10:40:15",
-  "prev_buy": 19.84155,
-  "prev_sell": 19.061784
+  "sell": 19.848894,
+  "buy": 19.069526,
+  "date": "2022-11-08 10:50:16",
+  "prev_buy": 19.863072,
+  "prev_sell": 19.081874
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -108,16 +108,16 @@
   "sell": 20.22,
   "buy": 19.69,
   "date": "2022-11-08 09:40:16",
-  "prev_buy": 20.22,
-  "prev_sell": 19.69
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.968,
-  "buy": 18.9575,
-  "date": "2022-11-08 10:40:16",
-  "prev_buy": 19.986,
-  "prev_sell": 18.966
+  "sell": 20.0028,
+  "buy": 18.9923,
+  "date": "2022-11-08 10:50:18",
+  "prev_buy": 19.9917,
+  "prev_sell": 18.9812
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.78152,
-  "buy": 18.96377,
-  "date": "2022-11-08 10:40:20",
-  "prev_buy": 19.76374,
-  "prev_sell": 18.9548046
+  "sell": 19.7710552,
+  "buy": 18.96250315,
+  "date": "2022-11-08 10:50:22",
+  "prev_buy": 19.7851776,
+  "prev_sell": 18.97478185
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.82046,
-  "buy": 19.00269,
-  "date": "2022-11-08 10:40:21",
-  "prev_buy": 19.802645,
-  "prev_sell": 18.9937062
+  "sell": 19.8099746,
+  "buy": 19.00142055,
+  "date": "2022-11-08 10:50:23",
+  "prev_buy": 19.8241248,
+  "prev_sell": 19.01372445
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.830195,
-  "buy": 18.82755,
-  "date": "2022-11-08 10:40:21",
-  "prev_buy": 19.81237125,
-  "prev_sell": 18.818649
+  "sell": 19.81970445,
+  "buy": 18.82629225,
+  "date": "2022-11-08 10:50:23",
+  "prev_buy": 19.8338616,
+  "prev_sell": 18.83848275
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.789308,
-  "buy": 19.024096,
-  "date": "2022-11-08 10:40:22",
-  "prev_buy": 19.771521,
-  "prev_sell": 19.01510208
+  "sell": 19.77883908,
+  "buy": 19.02282512,
+  "date": "2022-11-08 10:50:24",
+  "prev_buy": 19.79296704,
+  "prev_sell": 19.03514288
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.70364,
-  "buy": 18.83728,
-  "date": "2022-11-08 10:40:22",
-  "prev_buy": 19.68593,
-  "prev_sell": 18.8283744
+  "sell": 19.6932164,
+  "buy": 18.8360216,
+  "date": "2022-11-08 10:50:25",
+  "prev_buy": 19.7072832,
+  "prev_sell": 18.8482184
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.87887,
-  "buy": 18.62322,
-  "date": "2022-11-08 10:40:23",
-  "prev_buy": 19.8610025,
-  "prev_sell": 18.6144156
+  "sell": 19.8683537,
+  "buy": 18.6219759,
+  "date": "2022-11-08 10:50:25",
+  "prev_buy": 19.8825456,
+  "prev_sell": 18.6340341
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.83993,
-  "buy": 19.05134,
-  "date": "2022-11-08 10:40:24",
-  "prev_buy": 19.8220975,
-  "prev_sell": 19.0423332
+  "sell": 19.8294343,
+  "buy": 19.0500673,
+  "date": "2022-11-08 10:50:26",
+  "prev_buy": 19.8435984,
+  "prev_sell": 19.0624027
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.95675,
-  "buy": 18.6816,
-  "date": "2022-11-08 10:40:24",
-  "prev_buy": 19.9431175,
-  "prev_sell": 18.675936
+  "sell": 19.9461925,
+  "buy": 18.680352,
+  "date": "2022-11-08 10:50:26",
+  "prev_buy": 19.96044,
+  "prev_sell": 18.692448
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.9265715,
-  "buy": 19.00269,
-  "date": "2022-11-08 10:40:25",
-  "prev_buy": 19.91295962,
-  "prev_sell": 18.99692865
+  "sell": 19.91602997,
+  "buy": 19.00142055,
+  "date": "2022-11-08 10:50:27",
+  "prev_buy": 19.93025592,
+  "prev_sell": 19.01372445
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.908075,
-  "buy": 19.02215,
-  "date": "2022-11-08 10:40:25",
-  "prev_buy": 19.89447575,
-  "prev_sell": 19.01638275
+  "sell": 19.89754325,
+  "buy": 19.02087925,
+  "date": "2022-11-08 10:50:27",
+  "prev_buy": 19.911756,
+  "prev_sell": 19.03319575
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.908075,
-  "buy": 19.01242,
-  "date": "2022-11-08 10:40:25",
-  "prev_buy": 19.89447575,
-  "prev_sell": 19.0066557
+  "sell": 19.89754325,
+  "buy": 19.0111499,
+  "date": "2022-11-08 10:50:28",
+  "prev_buy": 19.911756,
+  "prev_sell": 19.0234601
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
