commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44799,6 +44799,10 @@
     {
       "Date": "2022-11-08 06:00",
       "Rate": "19.4733"
+    },
+    {
+      "Date": "2022-11-08 07:00",
+      "Rate": "19.4866"
     }
   ]
 }
