commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44803,6 +44803,10 @@
     {
       "Date": "2022-11-08 07:00",
       "Rate": "19.4866"
+    },
+    {
+      "Date": "2022-11-08 08:00",
+      "Rate": "19.4587"
     }
   ]
 }
