commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44807,6 +44807,10 @@
     {
       "Date": "2022-11-08 08:00",
       "Rate": "19.4587"
+    },
+    {
+      "Date": "2022-11-08 09:00",
+      "Rate": "19.4657"
     }
   ]
 }
