commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44811,6 +44811,10 @@
     {
       "Date": "2022-11-08 09:00",
       "Rate": "19.4657"
+    },
+    {
+      "Date": "2022-11-08 10:00",
+      "Rate": "19.4930"
     }
   ]
 }
