commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44815,6 +44815,10 @@
     {
       "Date": "2022-11-08 10:00",
       "Rate": "19.4930"
+    },
+    {
+      "Date": "2022-11-08 11:00",
+      "Rate": "19.5189"
     }
   ]
 }
