commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44819,6 +44819,10 @@
     {
       "Date": "2022-11-08 11:00",
       "Rate": "19.5189"
+    },
+    {
+      "Date": "2022-11-08 12:00",
+      "Rate": "19.5431"
     }
   ]
 }
