commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44823,6 +44823,10 @@
     {
       "Date": "2022-11-08 12:00",
       "Rate": "19.5431"
+    },
+    {
+      "Date": "2022-11-08 13:00",
+      "Rate": "19.5331"
     }
   ]
 }
