--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.7913375,
-  "buy": 19.228185,
-  "date": "2022-11-08 17:20:14",
-  "prev_buy": 19.70325,
-  "prev_sell": 19.14249
+  "sell": 19.764,
+  "buy": 19.212425,
+  "date": "2022-11-08 17:30:12",
+  "prev_buy": 19.693125,
+  "prev_sell": 19.143475
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.93794,
-  "buy": 19.13058,
-  "date": "2022-11-08 17:20:16",
-  "prev_buy": 19.8492,
-  "prev_sell": 19.04532
+  "sell": 19.9104,
+  "buy": 19.1149,
+  "date": "2022-11-08 17:30:15",
+  "prev_buy": 19.839,
+  "prev_sell": 19.0463
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-08 17:00:16",
-  "prev_buy": 20.22,
-  "prev_sell": 19.69
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-08 17:40:17",
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.042,
-  "buy": 19.0315,
-  "date": "2022-11-08 17:20:19",
-  "prev_buy": 19.9551,
-  "prev_sell": 18.9446
+  "sell": 20.0489,
+  "buy": 19.0384,
+  "date": "2022-11-08 17:40:18",
+  "prev_buy": 19.9552,
+  "prev_sell": 18.9447
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.859752,
-  "buy": 19.0232145,
-  "date": "2022-11-08 17:20:23",
-  "prev_buy": 19.77136,
-  "prev_sell": 18.938433
+  "sell": 19.83232,
+  "buy": 19.0076225,
+  "date": "2022-11-08 17:30:21",
+  "prev_buy": 19.7612,
+  "prev_sell": 18.9394075
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.898846,
-  "buy": 19.0622565,
-  "date": "2022-11-08 17:20:23",
-  "prev_buy": 19.81028,
-  "prev_sell": 18.977301
+  "sell": 19.87136,
+  "buy": 19.0466325,
+  "date": "2022-11-08 17:30:21",
+  "prev_buy": 19.8001,
+  "prev_sell": 18.9782775
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.9086195,
-  "buy": 18.8865675,
-  "date": "2022-11-08 17:20:24",
-  "prev_buy": 19.82001,
-  "prev_sell": 18.802395
+  "sell": 19.88112,
+  "buy": 18.8710875,
+  "date": "2022-11-08 17:30:22",
+  "prev_buy": 19.809825,
+  "prev_sell": 18.8033625
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.8675708,
-  "buy": 19.0837296,
-  "date": "2022-11-08 17:20:25",
-  "prev_buy": 19.779144,
-  "prev_sell": 18.9986784
+  "sell": 19.840128,
+  "buy": 19.068088,
+  "date": "2022-11-08 17:30:22",
+  "prev_buy": 19.76898,
+  "prev_sell": 18.999656
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.781564,
-  "buy": 18.896328,
-  "date": "2022-11-08 17:20:25",
-  "prev_buy": 19.69352,
-  "prev_sell": 18.812112
+  "sell": 19.75424,
+  "buy": 18.88084,
+  "date": "2022-11-08 17:30:23",
+  "prev_buy": 19.6834,
+  "prev_sell": 18.81308
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.957487,
-  "buy": 18.681597,
-  "date": "2022-11-08 17:20:25",
-  "prev_buy": 19.86866,
-  "prev_sell": 18.598338
+  "sell": 19.92992,
+  "buy": 18.666285,
+  "date": "2022-11-08 17:30:23",
+  "prev_buy": 19.85845,
+  "prev_sell": 18.599295
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.918393,
-  "buy": 19.111059,
-  "date": "2022-11-08 17:20:26",
-  "prev_buy": 19.82974,
-  "prev_sell": 19.025886
+  "sell": 19.89088,
+  "buy": 19.095395,
+  "date": "2022-11-08 17:30:24",
+  "prev_buy": 19.81955,
+  "prev_sell": 19.026865
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.035675,
-  "buy": 18.74016,
-  "date": "2022-11-08 17:20:26",
-  "prev_buy": 19.9465,
-  "prev_sell": 18.65664
+  "sell": 20.008,
+  "buy": 18.7248,
+  "date": "2022-11-08 17:30:24",
+  "prev_buy": 19.93625,
+  "prev_sell": 18.6576
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.00537715,
-  "buy": 19.0622565,
-  "date": "2022-11-08 17:20:27",
-  "prev_buy": 19.916337,
-  "prev_sell": 18.977301
+  "sell": 19.977744,
+  "buy": 19.0466325,
+  "date": "2022-11-08 17:30:24",
+  "prev_buy": 19.9061025,
+  "prev_sell": 18.9782775
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.9868075,
-  "buy": 19.0817775,
-  "date": "2022-11-08 17:20:27",
-  "prev_buy": 19.89785,
-  "prev_sell": 18.996735
+  "sell": 19.9592,
+  "buy": 19.0661375,
+  "date": "2022-11-08 17:30:25",
+  "prev_buy": 19.887625,
+  "prev_sell": 18.9977125
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.9868075,
-  "buy": 19.072017,
-  "date": "2022-11-08 17:20:28",
-  "prev_buy": 19.89785,
-  "prev_sell": 18.987018
+  "sell": 19.9592,
+  "buy": 19.056385,
+  "date": "2022-11-08 17:30:25",
+  "prev_buy": 19.887625,
+  "prev_sell": 18.987995
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
