commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44827,6 +44827,10 @@
     {
       "Date": "2022-11-08 13:00",
       "Rate": "19.5331"
+    },
+    {
+      "Date": "2022-11-08 14:00",
+      "Rate": "19.5332"
     }
   ]
 }
