commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44831,6 +44831,10 @@
     {
       "Date": "2022-11-08 14:00",
       "Rate": "19.5332"
+    },
+    {
+      "Date": "2022-11-08 15:00",
+      "Rate": "19.5313"
     }
   ]
 }
