commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44835,6 +44835,10 @@
     {
       "Date": "2022-11-08 15:00",
       "Rate": "19.5313"
+    },
+    {
+      "Date": "2022-11-08 16:00",
+      "Rate": "19.5405"
     }
   ]
 }
