commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44839,6 +44839,10 @@
     {
       "Date": "2022-11-08 16:00",
       "Rate": "19.5405"
+    },
+    {
+      "Date": "2022-11-08 17:00",
+      "Rate": "19.5589"
     }
   ]
 }
