commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44843,6 +44843,10 @@
     {
       "Date": "2022-11-08 17:00",
       "Rate": "19.5589"
+    },
+    {
+      "Date": "2022-11-08 18:00",
+      "Rate": "19.5536"
     }
   ]
 }
