commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44847,6 +44847,10 @@
     {
       "Date": "2022-11-08 18:00",
       "Rate": "19.5536"
+    },
+    {
+      "Date": "2022-11-08 19:00",
+      "Rate": "19.5367"
     }
   ]
 }
