--- a/indexRt.html
+++ b/indexRt.html
@@ -44851,6 +44851,10 @@
     {
       "Date": "2022-11-08 19:00",
       "Rate": "19.5367"
+    },
+    {
+      "Date": "2022-11-08 20:00",
+      "Rate": "19.5439"
     }
   ]
 }
