--- a/indexRt.html
+++ b/indexRt.html
@@ -44855,6 +44855,10 @@
     {
       "Date": "2022-11-08 20:00",
       "Rate": "19.5439"
+    },
+    {
+      "Date": "2022-11-08 21:00",
+      "Rate": "19.5390"
     }
   ]
 }
