commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44859,6 +44859,10 @@
     {
       "Date": "2022-11-08 21:00",
       "Rate": "19.5390"
+    },
+    {
+      "Date": "2022-11-08 22:00",
+      "Rate": "19.5500"
     }
   ]
 }
