commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44863,6 +44863,10 @@
     {
       "Date": "2022-11-08 22:00",
       "Rate": "19.5500"
+    },
+    {
+      "Date": "2022-11-08 23:00",
+      "Rate": "19.5578"
     }
   ]
 }
