commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44867,6 +44867,10 @@
     {
       "Date": "2022-11-08 23:00",
       "Rate": "19.5578"
+    },
+    {
+      "Date": "2022-11-09 00:00",
+      "Rate": "19.5314"
     }
   ]
 }
