commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44871,6 +44871,10 @@
     {
       "Date": "2022-11-09 00:00",
       "Rate": "19.5314"
+    },
+    {
+      "Date": "2022-11-09 01:00",
+      "Rate": "19.5199"
     }
   ]
 }
