commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44875,6 +44875,10 @@
     {
       "Date": "2022-11-09 01:00",
       "Rate": "19.5199"
+    },
+    {
+      "Date": "2022-11-09 02:00",
+      "Rate": "19.5631"
     }
   ]
 }
