commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44879,6 +44879,10 @@
     {
       "Date": "2022-11-09 02:00",
       "Rate": "19.5631"
+    },
+    {
+      "Date": "2022-11-09 03:00",
+      "Rate": "19.5740"
     }
   ]
 }
