commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44883,6 +44883,10 @@
     {
       "Date": "2022-11-09 03:00",
       "Rate": "19.5740"
+    },
+    {
+      "Date": "2022-11-09 04:00",
+      "Rate": "19.5607"
     }
   ]
 }
