--- a/indexRt.html
+++ b/indexRt.html
@@ -44887,6 +44887,10 @@
     {
       "Date": "2022-11-09 04:00",
       "Rate": "19.5607"
+    },
+    {
+      "Date": "2022-11-09 05:00",
+      "Rate": "19.5526"
     }
   ]
 }
