--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.8616,
-  "buy": 19.1149,
-  "date": "2022-11-08 17:20:12",
-  "prev_buy": 19.790375,
-  "prev_sell": 19.0463
+  "sell": 19.90637,
+  "buy": 19.16292,
+  "date": "2022-11-09 09:30:10",
+  "prev_buy": 19.81683,
+  "prev_sell": 19.07766
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.764,
-  "buy": 19.212425,
-  "date": "2022-11-08 17:30:12",
-  "prev_buy": 19.693125,
-  "prev_sell": 19.143475
+  "sell": 19.80855,
+  "buy": 19.26069,
+  "date": "2022-11-09 09:30:12",
+  "prev_buy": 19.71945,
+  "prev_sell": 19.174995
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.9104,
-  "buy": 19.1149,
-  "date": "2022-11-08 17:30:15",
-  "prev_buy": 19.839,
-  "prev_sell": 19.0463
+  "sell": 19.95528,
+  "buy": 19.16292,
+  "date": "2022-11-09 09:30:14",
+  "prev_buy": 19.86552,
+  "prev_sell": 19.07766
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.22,
-  "buy": 19.69,
-  "date": "2022-11-09 09:20:16",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-11-09 09:30:15",
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.077,
-  "buy": 19.061,
-  "date": "2022-11-09 09:00:14",
-  "prev_buy": 19.967,
-  "prev_sell": 18.9565
+  "sell": 20.106,
+  "buy": 19.091,
+  "date": "2022-11-09 09:40:16",
+  "prev_buy": 19.9656,
+  "prev_sell": 18.9551
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.83232,
-  "buy": 19.0076225,
-  "date": "2022-11-08 17:30:21",
-  "prev_buy": 19.7612,
-  "prev_sell": 18.9394075
+  "sell": 19.877024,
+  "buy": 19.055373,
+  "date": "2022-11-09 09:30:19",
+  "prev_buy": 19.787616,
+  "prev_sell": 18.9705915
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.87136,
-  "buy": 19.0466325,
-  "date": "2022-11-08 17:30:21",
-  "prev_buy": 19.8001,
-  "prev_sell": 18.9782775
+  "sell": 19.916152,
+  "buy": 19.094481,
+  "date": "2022-11-09 09:30:20",
+  "prev_buy": 19.826568,
+  "prev_sell": 19.0095255
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.88112,
-  "buy": 18.8710875,
-  "date": "2022-11-08 17:30:22",
-  "prev_buy": 19.809825,
-  "prev_sell": 18.8033625
+  "sell": 19.925934,
+  "buy": 18.918495,
+  "date": "2022-11-09 09:30:20",
+  "prev_buy": 19.836306,
+  "prev_sell": 18.8343225
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.840128,
-  "buy": 19.068088,
-  "date": "2022-11-08 17:30:22",
-  "prev_buy": 19.76898,
-  "prev_sell": 18.999656
+  "sell": 19.8848496,
+  "buy": 19.1159904,
+  "date": "2022-11-09 09:30:20",
+  "prev_buy": 19.7954064,
+  "prev_sell": 19.0309392
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.75424,
-  "buy": 18.88084,
-  "date": "2022-11-08 17:30:23",
-  "prev_buy": 19.6834,
-  "prev_sell": 18.81308
+  "sell": 19.798768,
+  "buy": 18.928272,
+  "date": "2022-11-09 09:30:21",
+  "prev_buy": 19.709712,
+  "prev_sell": 18.844056
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.92992,
-  "buy": 18.666285,
-  "date": "2022-11-08 17:30:23",
-  "prev_buy": 19.85845,
-  "prev_sell": 18.599295
+  "sell": 19.974844,
+  "buy": 18.713178,
+  "date": "2022-11-09 09:30:21",
+  "prev_buy": 19.884996,
+  "prev_sell": 18.629919
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.89088,
-  "buy": 19.095395,
-  "date": "2022-11-08 17:30:24",
-  "prev_buy": 19.81955,
-  "prev_sell": 19.026865
+  "sell": 19.935716,
+  "buy": 19.143366,
+  "date": "2022-11-09 09:30:22",
+  "prev_buy": 19.846044,
+  "prev_sell": 19.058193
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.008,
-  "buy": 18.7248,
-  "date": "2022-11-08 17:30:24",
-  "prev_buy": 19.93625,
-  "prev_sell": 18.6576
+  "sell": 20.0531,
+  "buy": 18.77184,
+  "date": "2022-11-09 09:30:22",
+  "prev_buy": 19.9629,
+  "prev_sell": 18.68832
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.977744,
-  "buy": 19.0466325,
-  "date": "2022-11-08 17:30:24",
-  "prev_buy": 19.9061025,
-  "prev_sell": 18.9782775
+  "sell": 20.0227758,
+  "buy": 19.094481,
+  "date": "2022-11-09 09:30:23",
+  "prev_buy": 19.9327122,
+  "prev_sell": 19.0095255
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.9592,
-  "buy": 19.0661375,
-  "date": "2022-11-08 17:30:25",
-  "prev_buy": 19.887625,
-  "prev_sell": 18.9977125
+  "sell": 20.00419,
+  "buy": 19.114035,
+  "date": "2022-11-09 09:30:23",
+  "prev_buy": 19.91421,
+  "prev_sell": 19.0289925
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.9592,
-  "buy": 19.056385,
-  "date": "2022-11-08 17:30:25",
-  "prev_buy": 19.887625,
-  "prev_sell": 18.987995
+  "sell": 20.00419,
+  "buy": 19.104258,
+  "date": "2022-11-09 09:30:23",
+  "prev_buy": 19.91421,
+  "prev_sell": 19.019259
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
