commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44891,6 +44891,10 @@
     {
       "Date": "2022-11-09 05:00",
       "Rate": "19.5526"
+    },
+    {
+      "Date": "2022-11-09 06:00",
+      "Rate": "19.5865"
     }
   ]
 }
