--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.90637,
-  "buy": 19.16292,
-  "date": "2022-11-09 09:30:10",
-  "prev_buy": 19.81683,
-  "prev_sell": 19.07766
+  "sell": 19.94249125,
+  "buy": 19.205746,
+  "date": "2022-11-09 09:50:10",
+  "prev_buy": 19.79902375,
+  "prev_sell": 19.06786
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.80855,
-  "buy": 19.26069,
-  "date": "2022-11-09 09:30:12",
-  "prev_buy": 19.71945,
-  "prev_sell": 19.174995
+  "sell": 19.84449375,
+  "buy": 19.3037345,
+  "date": "2022-11-09 09:50:14",
+  "prev_buy": 19.70173125,
+  "prev_sell": 19.165145
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.95528,
-  "buy": 19.16292,
-  "date": "2022-11-09 09:30:14",
-  "prev_buy": 19.86552,
-  "prev_sell": 19.07766
+  "sell": 19.99149,
+  "buy": 19.205746,
+  "date": "2022-11-09 09:50:16",
+  "prev_buy": 19.84767,
+  "prev_sell": 19.06786
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-09 09:30:15",
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-09 09:50:16",
   "prev_buy": 20.22,
   "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.106,
-  "buy": 19.091,
-  "date": "2022-11-09 09:40:16",
-  "prev_buy": 19.9656,
-  "prev_sell": 18.9551
+  "sell": 20.1002,
+  "buy": 19.0897,
+  "date": "2022-11-09 09:50:17",
+  "prev_buy": 19.9743,
+  "prev_sell": 18.9638
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.877024,
-  "buy": 19.055373,
-  "date": "2022-11-09 09:30:19",
+  "sell": 19.913092,
+  "buy": 19.09795865,
+  "date": "2022-11-09 09:50:23",
   "prev_buy": 19.787616,
   "prev_sell": 18.9705915
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.916152,
-  "buy": 19.094481,
-  "date": "2022-11-09 09:30:20",
+  "sell": 19.952291,
+  "buy": 19.13715405,
+  "date": "2022-11-09 09:50:24",
   "prev_buy": 19.826568,
   "prev_sell": 19.0095255
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.925934,
-  "buy": 18.918495,
-  "date": "2022-11-09 09:30:20",
+  "sell": 19.96209075,
+  "buy": 18.96077475,
+  "date": "2022-11-09 09:50:25",
   "prev_buy": 19.836306,
   "prev_sell": 18.8343225
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.8848496,
-  "buy": 19.1159904,
-  "date": "2022-11-09 09:30:20",
+  "sell": 19.9209318,
+  "buy": 19.15871152,
+  "date": "2022-11-09 09:50:25",
   "prev_buy": 19.7954064,
   "prev_sell": 19.0309392
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.798768,
-  "buy": 18.928272,
-  "date": "2022-11-09 09:30:21",
+  "sell": 19.834694,
+  "buy": 18.9705736,
+  "date": "2022-11-09 09:50:25",
   "prev_buy": 19.709712,
   "prev_sell": 18.844056
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.974844,
-  "buy": 18.713178,
-  "date": "2022-11-09 09:30:21",
+  "sell": 20.0110895,
+  "buy": 18.7549989,
+  "date": "2022-11-09 09:50:26",
   "prev_buy": 19.884996,
   "prev_sell": 18.629919
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.935716,
-  "buy": 19.143366,
-  "date": "2022-11-09 09:30:22",
+  "sell": 19.9718905,
+  "buy": 19.1861483,
+  "date": "2022-11-09 09:50:26",
   "prev_buy": 19.846044,
   "prev_sell": 19.058193
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.0531,
-  "buy": 18.77184,
-  "date": "2022-11-09 09:30:22",
+  "sell": 20.0894875,
+  "buy": 18.813792,
+  "date": "2022-11-09 09:50:27",
   "prev_buy": 19.9629,
   "prev_sell": 18.68832
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.0227758,
-  "buy": 19.094481,
-  "date": "2022-11-09 09:30:23",
+  "sell": 20.05910828,
+  "buy": 19.13715405,
+  "date": "2022-11-09 09:50:28",
   "prev_buy": 19.9327122,
   "prev_sell": 19.0095255
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.00419,
-  "buy": 19.114035,
-  "date": "2022-11-09 09:30:23",
+  "sell": 20.04048875,
+  "buy": 19.15675175,
+  "date": "2022-11-09 09:50:28",
   "prev_buy": 19.91421,
   "prev_sell": 19.0289925
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.00419,
-  "buy": 19.104258,
-  "date": "2022-11-09 09:30:23",
+  "sell": 20.04048875,
+  "buy": 19.1469529,
+  "date": "2022-11-09 09:50:28",
   "prev_buy": 19.91421,
   "prev_sell": 19.019259
 },{
