commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.93781075,
-  "buy": 19.20114,
-  "date": "2022-11-09 10:40:11",
-  "prev_buy": 19.810725,
-  "prev_sell": 19.0708
+  "sell": 19.95775375,
+  "buy": 19.220446,
+  "date": "2022-11-09 10:50:10",
+  "prev_buy": 19.80024475,
+  "prev_sell": 19.069526
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.83983625,
-  "buy": 19.299105,
-  "date": "2022-11-09 10:40:15",
-  "prev_buy": 19.713375,
-  "prev_sell": 19.1681
+  "sell": 19.8561375,
+  "buy": 19.3147665,
+  "date": "2022-11-09 10:50:14",
+  "prev_buy": 19.70294625,
+  "prev_sell": 19.1668195
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.986798,
-  "buy": 19.20114,
-  "date": "2022-11-09 10:40:17",
-  "prev_buy": 19.8594,
-  "prev_sell": 19.0708
+  "sell": 20.00322,
+  "buy": 19.216722,
+  "date": "2022-11-09 10:50:16",
+  "prev_buy": 19.848894,
+  "prev_sell": 19.069526
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.22,
-  "buy": 19.69,
-  "date": "2022-11-09 10:40:19",
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-11-09 10:50:17",
   "prev_buy": 20.22,
   "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.122,
-  "buy": 19.107,
-  "date": "2022-11-09 10:40:19",
-  "prev_buy": 19.968,
-  "prev_sell": 18.9575
+  "sell": 20.1268,
+  "buy": 19.1163,
+  "date": "2022-11-09 10:50:18",
+  "prev_buy": 20.0028,
+  "prev_sell": 18.9923
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.9084184,
-  "buy": 19.0933785,
-  "date": "2022-11-09 10:40:24",
-  "prev_buy": 19.78152,
-  "prev_sell": 18.96377
+  "sell": 19.924776,
+  "buy": 19.10887305,
+  "date": "2022-11-09 10:50:22",
+  "prev_buy": 19.7710552,
+  "prev_sell": 18.96250315
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.9476082,
-  "buy": 19.1325645,
-  "date": "2022-11-09 10:40:24",
-  "prev_buy": 19.82046,
-  "prev_sell": 19.00269
+  "sell": 19.963998,
+  "buy": 19.14809085,
+  "date": "2022-11-09 10:50:23",
+  "prev_buy": 19.8099746,
+  "prev_sell": 19.00142055
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.95740565,
-  "buy": 18.9562275,
-  "date": "2022-11-09 10:40:24",
-  "prev_buy": 19.830195,
-  "prev_sell": 18.82755
+  "sell": 19.9738035,
+  "buy": 18.97161075,
+  "date": "2022-11-09 10:50:23",
+  "prev_buy": 19.81970445,
+  "prev_sell": 18.82629225
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.91625636,
-  "buy": 19.1541168,
-  "date": "2022-11-09 10:40:25",
-  "prev_buy": 19.789308,
-  "prev_sell": 19.024096
+  "sell": 19.9326204,
+  "buy": 19.16966064,
+  "date": "2022-11-09 10:50:24",
+  "prev_buy": 19.77883908,
+  "prev_sell": 19.02282512
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.8300388,
-  "buy": 18.966024,
-  "date": "2022-11-09 10:40:26",
-  "prev_buy": 19.70364,
-  "prev_sell": 18.83728
+  "sell": 19.846332,
+  "buy": 18.9814152,
+  "date": "2022-11-09 10:50:25",
+  "prev_buy": 19.6932164,
+  "prev_sell": 18.8360216
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.0063929,
-  "buy": 18.750501,
-  "date": "2022-11-09 10:40:26",
-  "prev_buy": 19.87887,
-  "prev_sell": 18.62322
+  "sell": 20.022831,
+  "buy": 18.7657173,
+  "date": "2022-11-09 10:50:25",
+  "prev_buy": 19.8683537,
+  "prev_sell": 18.6219759
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.9672031,
-  "buy": 19.181547,
-  "date": "2022-11-09 10:40:27",
-  "prev_buy": 19.83993,
-  "prev_sell": 19.05134
+  "sell": 19.983609,
+  "buy": 19.1971131,
+  "date": "2022-11-09 10:50:25",
+  "prev_buy": 19.8294343,
+  "prev_sell": 19.0500673
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.0847725,
-  "buy": 18.80928,
-  "date": "2022-11-09 10:40:27",
-  "prev_buy": 19.95675,
-  "prev_sell": 18.6816
+  "sell": 20.101275,
+  "buy": 18.824544,
+  "date": "2022-11-09 10:50:26",
+  "prev_buy": 19.9461925,
+  "prev_sell": 18.680352
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.05440041,
-  "buy": 19.1325645,
-  "date": "2022-11-09 10:40:28",
-  "prev_buy": 19.9265715,
-  "prev_sell": 19.00269
+  "sell": 20.07087795,
+  "buy": 19.14809085,
+  "date": "2022-11-09 10:50:26",
+  "prev_buy": 19.91602997,
+  "prev_sell": 19.00142055
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.03578525,
-  "buy": 19.1521575,
-  "date": "2022-11-09 10:40:28",
-  "prev_buy": 19.908075,
-  "prev_sell": 19.02215
+  "sell": 20.0522475,
+  "buy": 19.16769975,
+  "date": "2022-11-09 10:50:27",
+  "prev_buy": 19.89754325,
+  "prev_sell": 19.02087925
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.03578525,
-  "buy": 19.142361,
-  "date": "2022-11-09 10:40:29",
-  "prev_buy": 19.908075,
-  "prev_sell": 19.01242
+  "sell": 20.0522475,
+  "buy": 19.1578953,
+  "date": "2022-11-09 10:50:27",
+  "prev_buy": 19.89754325,
+  "prev_sell": 19.0111499
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
