--- a/indexRt.html
+++ b/indexRt.html
@@ -44895,6 +44895,10 @@
     {
       "Date": "2022-11-09 06:00",
       "Rate": "19.5865"
+    },
+    {
+      "Date": "2022-11-09 07:00",
+      "Rate": "19.6302"
     }
   ]
 }
