commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44899,6 +44899,10 @@
     {
       "Date": "2022-11-09 07:00",
       "Rate": "19.6302"
+    },
+    {
+      "Date": "2022-11-09 08:00",
+      "Rate": "19.5958"
     }
   ]
 }
