--- a/indexRt.html
+++ b/indexRt.html
@@ -44903,6 +44903,10 @@
     {
       "Date": "2022-11-09 08:00",
       "Rate": "19.5958"
+    },
+    {
+      "Date": "2022-11-09 09:00",
+      "Rate": "19.5710"
     }
   ]
 }
