commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44907,6 +44907,10 @@
     {
       "Date": "2022-11-09 09:00",
       "Rate": "19.5710"
+    },
+    {
+      "Date": "2022-11-09 10:00",
+      "Rate": "19.5643"
     }
   ]
 }
