commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44911,6 +44911,10 @@
     {
       "Date": "2022-11-09 10:00",
       "Rate": "19.5643"
+    },
+    {
+      "Date": "2022-11-09 11:00",
+      "Rate": "19.5876"
     }
   ]
 }
