commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -12,8 +12,8 @@
   "sell": 20.1,
   "buy": 19.01,
   "date": "2022-11-09 10:40:09",
-  "prev_buy": 19.98,
-  "prev_sell": 18.85
+  "prev_buy": 20.04,
+  "prev_sell": 18.95
 },{
   "bank_id": 3,
   "bank_name": "SANTANDER",
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.931197,
-  "buy": 19.194476,
-  "date": "2022-11-09 15:20:10",
-  "prev_buy": 19.85946325,
-  "prev_sell": 19.124504
+  "sell": 19.93821775,
+  "buy": 19.200356,
+  "date": "2022-11-09 15:40:11",
+  "prev_buy": 19.878287,
+  "prev_sell": 19.142536
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.83700125,
-  "buy": 19.29615,
-  "date": "2022-11-09 15:20:12",
-  "prev_buy": 19.75995,
-  "prev_sell": 19.220502
+  "sell": 19.84024125,
+  "buy": 19.298317,
+  "date": "2022-11-09 15:40:14",
+  "prev_buy": 19.780605,
+  "prev_sell": 19.240202
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.983942,
-  "buy": 19.1982,
-  "date": "2022-11-09 15:20:15",
-  "prev_buy": 19.90632,
-  "prev_sell": 19.122936
+  "sell": 19.987206,
+  "buy": 19.200356,
+  "date": "2022-11-09 15:40:16",
+  "prev_buy": 19.927128,
+  "prev_sell": 19.142536
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -108,16 +108,16 @@
   "sell": 20.22,
   "buy": 19.69,
   "date": "2022-11-09 15:20:16",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.0975,
-  "buy": 19.087,
-  "date": "2022-11-09 15:20:17",
-  "prev_buy": 20.0452,
-  "prev_sell": 19.0347
+  "sell": 20.1011,
+  "buy": 19.0906,
+  "date": "2022-11-09 15:40:18",
+  "prev_buy": 20.0631,
+  "prev_sell": 19.0526
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.9055736,
-  "buy": 19.090455,
-  "date": "2022-11-09 15:20:21",
-  "prev_buy": 19.828256,
-  "prev_sell": 19.0156134
+  "sell": 19.9088248,
+  "buy": 19.0925989,
+  "date": "2022-11-09 15:40:23",
+  "prev_buy": 19.8489824,
+  "prev_sell": 19.0351034
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.9447578,
-  "buy": 19.129635,
-  "date": "2022-11-09 15:20:22",
-  "prev_buy": 19.867288,
-  "prev_sell": 19.0546398
+  "sell": 19.9480154,
+  "buy": 19.1317833,
+  "date": "2022-11-09 15:40:24",
+  "prev_buy": 19.8916182,
+  "prev_sell": 19.07797815
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.95455385,
-  "buy": 18.953325,
-  "date": "2022-11-09 15:20:22",
-  "prev_buy": 19.877046,
-  "prev_sell": 18.879021
+  "sell": 19.95781305,
+  "buy": 18.9554535,
+  "date": "2022-11-09 15:40:24",
+  "prev_buy": 19.90138815,
+  "prev_sell": 18.90214425
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.91341044,
-  "buy": 19.151184,
-  "date": "2022-11-09 15:20:23",
-  "prev_buy": 19.8360624,
-  "prev_sell": 19.07610432
+  "sell": 19.91666292,
+  "buy": 19.15333472,
+  "date": "2022-11-09 15:40:25",
+  "prev_buy": 19.86035436,
+  "prev_sell": 19.09946896
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.8272052,
-  "buy": 18.96312,
-  "date": "2022-11-09 15:20:24",
-  "prev_buy": 19.750192,
-  "prev_sell": 18.8887776
+  "sell": 19.8304436,
+  "buy": 18.9652496,
+  "date": "2022-11-09 15:40:25",
+  "prev_buy": 19.7708368,
+  "prev_sell": 18.9081376
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.0035341,
-  "buy": 18.74763,
-  "date": "2022-11-09 15:20:24",
-  "prev_buy": 19.925836,
-  "prev_sell": 18.6741324
+  "sell": 20.0068013,
+  "buy": 18.7497354,
+  "date": "2022-11-09 15:40:26",
+  "prev_buy": 19.9466644,
+  "prev_sell": 18.6932724
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.9643499,
-  "buy": 19.17861,
-  "date": "2022-11-09 15:20:25",
-  "prev_buy": 19.886804,
-  "prev_sell": 19.1034228
+  "sell": 19.9676107,
+  "buy": 19.1807638,
+  "date": "2022-11-09 15:40:27",
+  "prev_buy": 19.9111581,
+  "prev_sell": 19.1268209
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.0819025,
-  "buy": 18.8064,
-  "date": "2022-11-09 15:20:25",
-  "prev_buy": 20.0039,
-  "prev_sell": 18.732672
+  "sell": 20.0851825,
+  "buy": 18.808512,
+  "date": "2022-11-09 15:40:27",
+  "prev_buy": 20.0283975,
+  "prev_sell": 18.755616
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.05153475,
-  "buy": 19.129635,
-  "date": "2022-11-09 15:20:25",
-  "prev_buy": 19.9736502,
-  "prev_sell": 19.0546398
+  "sell": 20.05480979,
+  "buy": 19.1317833,
+  "date": "2022-11-09 15:40:28",
+  "prev_buy": 19.99811066,
+  "prev_sell": 19.07797815
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.03292225,
-  "buy": 19.149225,
-  "date": "2022-11-09 15:20:26",
-  "prev_buy": 19.95511,
-  "prev_sell": 19.074153
+  "sell": 20.03619425,
+  "buy": 19.1513755,
+  "date": "2022-11-09 15:40:28",
+  "prev_buy": 19.97954775,
+  "prev_sell": 19.09751525
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.03292225,
-  "buy": 19.13943,
-  "date": "2022-11-09 15:20:26",
-  "prev_buy": 19.95511,
-  "prev_sell": 19.0643964
+  "sell": 20.03619425,
+  "buy": 19.1415794,
+  "date": "2022-11-09 15:40:28",
+  "prev_buy": 19.97954775,
+  "prev_sell": 19.0877467
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
