commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44915,6 +44915,10 @@
     {
       "Date": "2022-11-09 11:00",
       "Rate": "19.5876"
+    },
+    {
+      "Date": "2022-11-09 12:00",
+      "Rate": "19.6020"
     }
   ]
 }
