commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44919,6 +44919,10 @@
     {
       "Date": "2022-11-09 12:00",
       "Rate": "19.6020"
+    },
+    {
+      "Date": "2022-11-09 13:00",
+      "Rate": "19.5828"
     }
   ]
 }
