commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.943,
-  "buy": 19.1933,
-  "date": "2022-11-09 17:10:11",
-  "prev_buy": 19.8748275,
-  "prev_sell": 19.13352
+  "sell": 19.93893,
+  "buy": 19.17664,
+  "date": "2022-11-09 17:20:11",
+  "prev_buy": 19.8616,
+  "prev_sell": 19.1149
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.845,
-  "buy": 19.291225,
-  "date": "2022-11-09 17:10:14",
-  "prev_buy": 19.7771625,
-  "prev_sell": 19.23114
+  "sell": 19.84095,
+  "buy": 19.27448,
+  "date": "2022-11-09 17:20:13",
+  "prev_buy": 19.7913375,
+  "prev_sell": 19.228185
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.992,
-  "buy": 19.1933,
-  "date": "2022-11-09 17:10:16",
-  "prev_buy": 19.92774,
-  "prev_sell": 19.13548
+  "sell": 19.98792,
+  "buy": 19.17664,
+  "date": "2022-11-09 17:20:15",
+  "prev_buy": 19.93794,
+  "prev_sell": 19.13058
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.22,
-  "buy": 19.69,
-  "date": "2022-11-09 17:10:17",
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-11-09 17:20:17",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.09,
-  "buy": 19.074,
-  "date": "2022-11-09 17:10:18",
-  "prev_buy": 20.0328,
-  "prev_sell": 19.0223
+  "sell": 20.0862,
+  "buy": 19.0757,
+  "date": "2022-11-09 17:20:17",
+  "prev_buy": 20.042,
+  "prev_sell": 19.0315
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.9136,
-  "buy": 19.0855825,
-  "date": "2022-11-09 17:10:23",
-  "prev_buy": 19.849592,
-  "prev_sell": 19.028087
+  "sell": 19.909536,
+  "buy": 19.069016,
+  "date": "2022-11-09 17:20:22",
+  "prev_buy": 19.859752,
+  "prev_sell": 19.0232145
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.9528,
-  "buy": 19.1247525,
-  "date": "2022-11-09 17:10:24",
-  "prev_buy": 19.888666,
-  "prev_sell": 19.067139
+  "sell": 19.948728,
+  "buy": 19.108152,
+  "date": "2022-11-09 17:20:23",
+  "prev_buy": 19.898846,
+  "prev_sell": 19.0622565
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.9626,
-  "buy": 18.9484875,
-  "date": "2022-11-09 17:10:25",
-  "prev_buy": 19.8984345,
-  "prev_sell": 18.891405
+  "sell": 19.958526,
+  "buy": 18.93204,
+  "date": "2022-11-09 17:20:24",
+  "prev_buy": 19.9086195,
+  "prev_sell": 18.8865675
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.92144,
-  "buy": 19.146296,
-  "date": "2022-11-09 17:10:26",
-  "prev_buy": 19.8574068,
-  "prev_sell": 19.0886176
+  "sell": 19.9173744,
+  "buy": 19.1296768,
+  "date": "2022-11-09 17:20:24",
+  "prev_buy": 19.8675708,
+  "prev_sell": 19.0837296
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.8352,
-  "buy": 18.95828,
-  "date": "2022-11-09 17:10:26",
-  "prev_buy": 19.771444,
-  "prev_sell": 18.901168
+  "sell": 19.831152,
+  "buy": 18.941824,
+  "date": "2022-11-09 17:20:25",
+  "prev_buy": 19.781564,
+  "prev_sell": 18.896328
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.0116,
-  "buy": 18.742845,
-  "date": "2022-11-09 17:10:27",
-  "prev_buy": 19.947277,
-  "prev_sell": 18.686382
+  "sell": 20.007516,
+  "buy": 18.726576,
+  "date": "2022-11-09 17:20:26",
+  "prev_buy": 19.957487,
+  "prev_sell": 18.681597
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.9724,
-  "buy": 19.173715,
-  "date": "2022-11-09 17:10:28",
-  "prev_buy": 19.908203,
-  "prev_sell": 19.115954
+  "sell": 19.968324,
+  "buy": 19.157072,
+  "date": "2022-11-09 17:20:26",
+  "prev_buy": 19.918393,
+  "prev_sell": 19.111059
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.09,
-  "buy": 18.8016,
-  "date": "2022-11-09 17:10:29",
-  "prev_buy": 20.025425,
-  "prev_sell": 18.74496
+  "sell": 20.0859,
+  "buy": 18.78528,
+  "date": "2022-11-09 17:20:27",
+  "prev_buy": 20.035675,
+  "prev_sell": 18.74016
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.05962,
-  "buy": 19.1247525,
-  "date": "2022-11-09 17:10:29",
-  "prev_buy": 19.99514265,
-  "prev_sell": 19.067139
+  "sell": 20.0555262,
+  "buy": 19.108152,
+  "date": "2022-11-09 17:20:27",
+  "prev_buy": 20.00537715,
+  "prev_sell": 19.0622565
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.041,
-  "buy": 19.1443375,
-  "date": "2022-11-09 17:10:30",
-  "prev_buy": 19.9765825,
-  "prev_sell": 19.086665
+  "sell": 20.03691,
+  "buy": 19.12772,
+  "date": "2022-11-09 17:20:28",
+  "prev_buy": 19.9868075,
+  "prev_sell": 19.0817775
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.041,
-  "buy": 19.134545,
-  "date": "2022-11-09 17:10:31",
-  "prev_buy": 19.9765825,
-  "prev_sell": 19.076902
+  "sell": 20.03691,
+  "buy": 19.117936,
+  "date": "2022-11-09 17:20:28",
+  "prev_buy": 19.9868075,
+  "prev_sell": 19.072017
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
