commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44923,6 +44923,10 @@
     {
       "Date": "2022-11-09 13:00",
       "Rate": "19.5828"
+    },
+    {
+      "Date": "2022-11-09 14:00",
+      "Rate": "19.5767"
     }
   ]
 }
