--- a/indexRt.html
+++ b/indexRt.html
@@ -44927,6 +44927,10 @@
     {
       "Date": "2022-11-09 14:00",
       "Rate": "19.5767"
+    },
+    {
+      "Date": "2022-11-09 15:00",
+      "Rate": "19.5806"
     }
   ]
 }
