commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44931,6 +44931,10 @@
     {
       "Date": "2022-11-09 15:00",
       "Rate": "19.5806"
+    },
+    {
+      "Date": "2022-11-09 16:00",
+      "Rate": "19.5770"
     }
   ]
 }
