commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44935,6 +44935,10 @@
     {
       "Date": "2022-11-09 16:00",
       "Rate": "19.5770"
+    },
+    {
+      "Date": "2022-11-09 17:00",
+      "Rate": "19.5590"
     }
   ]
 }
