--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -1,19 +1,19 @@
 {"banks":[{
   "bank_id": 1,
   "bank_name": "",
-  "sell": 20.1,
-  "buy": 18.7,
-  "date": "2022-11-09 10:20:08",
-  "prev_buy": 20,
+  "sell": 20,
+  "buy": 18.6,
+  "date": "2022-11-10 10:00:08",
+  "prev_buy": 20.1,
   "prev_sell": 18.7
 },{
   "bank_id": 2,
   "bank_name": "BANAMEX",
-  "sell": 20.1,
-  "buy": 19.01,
-  "date": "2022-11-09 10:40:09",
-  "prev_buy": 20.04,
-  "prev_sell": 18.95
+  "sell": 19.86,
+  "buy": 18.75,
+  "date": "2022-11-10 12:10:09",
+  "prev_buy": 20.1,
+  "prev_sell": 19.01
 },{
   "bank_id": 3,
   "bank_name": "SANTANDER",
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.943,
-  "buy": 19.1933,
-  "date": "2022-11-09 17:40:11",
-  "prev_buy": 19.8616,
-  "prev_sell": 19.1149
+  "sell": 19.7173185,
+  "buy": 18.988872,
+  "date": "2022-11-10 12:40:11",
+  "prev_buy": 19.91827475,
+  "prev_sell": 19.182226
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -49,19 +49,19 @@
 },{
   "bank_id": 7,
   "bank_name": "IXE",
-  "sell": 19.85,
-  "buy": 18.45,
-  "date": "2022-11-09 16:00:14",
-  "prev_buy": 19.75,
-  "prev_sell": 18.35
+  "sell": 19.7,
+  "buy": 18.3,
+  "date": "2022-11-10 11:20:14",
+  "prev_buy": 19.9,
+  "prev_sell": 18.5
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.845,
-  "buy": 19.291225,
-  "date": "2022-11-09 17:40:13",
-  "prev_buy": 19.764,
-  "prev_sell": 19.212425
+  "sell": 19.6204275,
+  "buy": 19.085754,
+  "date": "2022-11-10 12:40:14",
+  "prev_buy": 19.82039625,
+  "prev_sell": 19.2800945
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.992,
-  "buy": 19.1933,
-  "date": "2022-11-09 17:40:16",
-  "prev_buy": 19.9104,
-  "prev_sell": 19.1149
+  "sell": 19.765764,
+  "buy": 18.988872,
+  "date": "2022-11-10 12:40:16",
+  "prev_buy": 19.966092,
+  "prev_sell": 19.18056
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -107,17 +107,17 @@
   "bank_name": "MONEX",
   "sell": 20.22,
   "buy": 19.69,
-  "date": "2022-11-09 20:50:30",
-  "prev_buy": 20.22,
-  "prev_sell": 19.69
+  "date": "2022-11-10 12:30:15",
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.0605,
-  "buy": 19.05,
-  "date": "2022-11-09 20:50:31",
-  "prev_buy": 20.056,
-  "prev_sell": 19.041
+  "sell": 19.874,
+  "buy": 18.859,
+  "date": "2022-11-10 12:40:17",
+  "prev_buy": 20.0781,
+  "prev_sell": 19.0681
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -129,8 +129,8 @@
 },{
   "bank_id": 17,
   "bank_name": "DOF",
-  "sell": " 19.4775",
-  "buy": " 19.4775",
+  "sell": " 19.5887",
+  "buy": " 19.5887",
   "date": "2022-06-03 07:10:28",
   "prev_buy": 19.5585,
   "prev_sell": 19.5585
@@ -140,8 +140,8 @@
   "sell": 20.2,
   "buy": 19.2,
   "date": "2022-11-09 10:40:22",
-  "prev_buy": 20.1,
-  "prev_sell": 19.1
+  "prev_buy": 20.2,
+  "prev_sell": 19.2
 },{
   "bank_id": 19,
   "bank_name": "BANCOBASE",
@@ -153,107 +153,107 @@
 },{
   "bank_id": 20,
   "bank_name": "SAT",
-  "sell": " 19.4775",
-  "buy": " 19.4775",
-  "date": "2022-11-09 02:10:20",
-  "prev_buy": 19.4647,
-  "prev_sell": 19.4647
+  "sell": " 19.5887",
+  "buy": " 19.5887",
+  "date": "2022-11-10 02:10:19",
+  "prev_buy": 19.4775,
+  "prev_sell": 19.4775
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.9136,
-  "buy": 19.0855825,
-  "date": "2022-11-09 17:40:24",
-  "prev_buy": 19.83232,
-  "prev_sell": 19.0076225
+  "sell": 19.6882512,
+  "buy": 18.8823018,
+  "date": "2022-11-10 12:40:22",
+  "prev_buy": 19.8877936,
+  "prev_sell": 19.072914
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.9528,
-  "buy": 19.1247525,
-  "date": "2022-11-09 17:40:24",
-  "prev_buy": 19.87136,
-  "prev_sell": 19.0466325
+  "sell": 19.7270076,
+  "buy": 18.9210546,
+  "date": "2022-11-10 12:40:23",
+  "prev_buy": 19.9269428,
+  "prev_sell": 19.112058
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.9626,
-  "buy": 18.9484875,
-  "date": "2022-11-09 17:40:25",
-  "prev_buy": 19.88112,
-  "prev_sell": 18.8710875
+  "sell": 19.7366967,
+  "buy": 18.746667,
+  "date": "2022-11-10 12:40:24",
+  "prev_buy": 19.9367301,
+  "prev_sell": 18.93591
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.92144,
-  "buy": 19.146296,
-  "date": "2022-11-09 17:40:25",
-  "prev_buy": 19.840128,
-  "prev_sell": 19.068088
+  "sell": 19.69600248,
+  "buy": 18.94236864,
+  "date": "2022-11-10 12:40:24",
+  "prev_buy": 19.89562344,
+  "prev_sell": 19.1335872
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.8352,
-  "buy": 18.95828,
-  "date": "2022-11-09 17:40:26",
-  "prev_buy": 19.75424,
-  "prev_sell": 18.88084
+  "sell": 19.6107384,
+  "buy": 18.7563552,
+  "date": "2022-11-10 12:40:25",
+  "prev_buy": 19.8094952,
+  "prev_sell": 18.945696
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.0116,
-  "buy": 18.742845,
-  "date": "2022-11-09 17:40:27",
-  "prev_buy": 19.92992,
-  "prev_sell": 18.666285
+  "sell": 19.7851422,
+  "buy": 18.5432148,
+  "date": "2022-11-10 12:40:25",
+  "prev_buy": 19.9856666,
+  "prev_sell": 18.730404
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.9724,
-  "buy": 19.173715,
-  "date": "2022-11-09 17:40:27",
-  "prev_buy": 19.89088,
-  "prev_sell": 19.095395
+  "sell": 19.7463858,
+  "buy": 18.9694956,
+  "date": "2022-11-10 12:40:26",
+  "prev_buy": 19.9465174,
+  "prev_sell": 19.160988
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.09,
-  "buy": 18.8016,
-  "date": "2022-11-09 17:40:27",
-  "prev_buy": 20.008,
-  "prev_sell": 18.7248
+  "sell": 19.862655,
+  "buy": 18.601344,
+  "date": "2022-11-10 12:40:26",
+  "prev_buy": 20.063965,
+  "prev_sell": 18.78912
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.05962,
-  "buy": 19.1247525,
-  "date": "2022-11-09 17:40:28",
-  "prev_buy": 19.977744,
-  "prev_sell": 19.0466325
+  "sell": 19.83261879,
+  "buy": 18.9210546,
+  "date": "2022-11-10 12:40:27",
+  "prev_buy": 20.03362437,
+  "prev_sell": 19.112058
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.041,
-  "buy": 19.1443375,
-  "date": "2022-11-09 17:40:29",
-  "prev_buy": 19.9592,
-  "prev_sell": 19.0661375
+  "sell": 19.8142095,
+  "buy": 18.940431,
+  "date": "2022-11-10 12:40:27",
+  "prev_buy": 20.0150285,
+  "prev_sell": 19.13163
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.041,
-  "buy": 19.134545,
-  "date": "2022-11-09 17:40:29",
-  "prev_buy": 19.9592,
-  "prev_sell": 19.056385
+  "sell": 19.8142095,
+  "buy": 18.9307428,
+  "date": "2022-11-10 12:40:28",
+  "prev_buy": 20.0150285,
+  "prev_sell": 19.121844
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
-  "sell": 19.85,
-  "buy": 18.45,
-  "date": "2022-11-09 16:10:27",
-  "prev_buy": 19.75,
-  "prev_sell": 18.35
+  "sell": 19.7,
+  "buy": 18.3,
+  "date": "2022-11-10 11:10:28",
+  "prev_buy": 19.9,
+  "prev_sell": 18.5
 },{
   "bank_id": 33,
   "bank_name": "",
