commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44939,6 +44939,10 @@
     {
       "Date": "2022-11-09 17:00",
       "Rate": "19.5590"
+    },
+    {
+      "Date": "2022-11-10 09:00",
+      "Rate": "19.3709"
     }
   ]
 }
