commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44943,6 +44943,10 @@
     {
       "Date": "2022-11-10 09:00",
       "Rate": "19.3709"
+    },
+    {
+      "Date": "2022-11-10 10:00",
+      "Rate": "19.4475"
     }
   ]
 }
