commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44947,6 +44947,10 @@
     {
       "Date": "2022-11-10 10:00",
       "Rate": "19.4475"
+    },
+    {
+      "Date": "2022-11-10 11:00",
+      "Rate": "19.4164"
     }
   ]
 }
