commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,16 +33,16 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.75669575,
-  "buy": 19.025916,
-  "date": "2022-11-10 14:50:11",
-  "prev_buy": 19.91562925,
-  "prev_sell": 19.17909
+  "sell": 19.7445875,
+  "buy": 19.014352,
+  "date": "2022-11-10 15:00:10",
+  "prev_buy": 19.9285515,
+  "prev_sell": 19.191634
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
-  "sell": 20.609,
-  "buy": 20.6025,
+  "sell": "19.5570",
+  "buy": "19.6330",
   "date": "2021-10-29 14:40:06",
   "prev_buy": 20.609,
   "prev_sell": 20.6025
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.65961125,
-  "buy": 19.122987,
-  "date": "2022-11-10 14:50:14",
-  "prev_buy": 19.8217125,
-  "prev_sell": 19.2810795
+  "sell": 19.6475625,
+  "buy": 19.111364,
+  "date": "2022-11-10 15:00:13",
+  "prev_buy": 19.8306225,
+  "prev_sell": 19.2895505
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.805238,
-  "buy": 19.025916,
-  "date": "2022-11-10 14:50:16",
-  "prev_buy": 19.96854,
-  "prev_sell": 19.183206
+  "sell": 19.7931,
+  "buy": 19.014352,
+  "date": "2022-11-10 15:00:16",
+  "prev_buy": 19.977516,
+  "prev_sell": 19.192124
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.912,
-  "buy": 18.9015,
-  "date": "2022-11-10 14:50:18",
-  "prev_buy": 20.0892,
-  "prev_sell": 19.0787
+  "sell": 19.898,
+  "buy": 18.8875,
+  "date": "2022-11-10 15:00:17",
+  "prev_buy": 20.0894,
+  "prev_sell": 19.0789
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.7275704,
-  "buy": 18.9191379,
-  "date": "2022-11-10 14:50:23",
-  "prev_buy": 19.890232,
-  "prev_sell": 19.07554515
+  "sell": 19.71548,
+  "buy": 18.9076388,
+  "date": "2022-11-10 15:00:23",
+  "prev_buy": 19.8991728,
+  "prev_sell": 19.0844131
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.7664042,
-  "buy": 18.9579663,
-  "date": "2022-11-10 14:50:23",
-  "prev_buy": 19.929386,
-  "prev_sell": 19.11469455
+  "sell": 19.75429,
+  "buy": 18.9464436,
+  "date": "2022-11-10 15:00:23",
+  "prev_buy": 19.9383444,
+  "prev_sell": 19.1235807
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.77611265,
-  "buy": 18.7832385,
-  "date": "2022-11-10 14:50:24",
-  "prev_buy": 19.9391745,
-  "prev_sell": 18.93852225
+  "sell": 19.7639925,
+  "buy": 18.771822,
+  "date": "2022-11-10 15:00:24",
+  "prev_buy": 19.9481373,
+  "prev_sell": 18.9473265
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.73533716,
-  "buy": 18.97932192,
-  "date": "2022-11-10 14:50:25",
-  "prev_buy": 19.8980628,
-  "prev_sell": 19.13622672
+  "sell": 19.723242,
+  "buy": 18.96778624,
+  "date": "2022-11-10 15:00:25",
+  "prev_buy": 19.90700712,
+  "prev_sell": 19.14512288
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.6499028,
-  "buy": 18.7929456,
-  "date": "2022-11-10 14:50:26",
-  "prev_buy": 19.811924,
-  "prev_sell": 18.9483096
+  "sell": 19.63786,
+  "buy": 18.7815232,
+  "date": "2022-11-10 15:00:26",
+  "prev_buy": 19.8208296,
+  "prev_sell": 18.9571184
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.8246549,
-  "buy": 18.5793894,
-  "date": "2022-11-10 14:50:26",
-  "prev_buy": 19.988117,
-  "prev_sell": 18.7329879
+  "sell": 19.812505,
+  "buy": 18.5680968,
+  "date": "2022-11-10 15:00:26",
+  "prev_buy": 19.9971018,
+  "prev_sell": 18.7416966
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.7858211,
-  "buy": 19.0065018,
-  "date": "2022-11-10 14:50:27",
-  "prev_buy": 19.948963,
-  "prev_sell": 19.1636313
+  "sell": 19.773695,
+  "buy": 18.9949496,
+  "date": "2022-11-10 15:00:27",
+  "prev_buy": 19.9579302,
+  "prev_sell": 19.1725402
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.9023225,
-  "buy": 18.637632,
-  "date": "2022-11-10 14:50:27",
-  "prev_buy": 20.066425,
-  "prev_sell": 18.791712
+  "sell": 19.890125,
+  "buy": 18.626304,
+  "date": "2022-11-10 15:00:27",
+  "prev_buy": 20.075445,
+  "prev_sell": 18.800448
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.87222631,
-  "buy": 18.9579663,
-  "date": "2022-11-10 14:50:28",
-  "prev_buy": 20.03608065,
-  "prev_sell": 19.11469455
+  "sell": 19.86004725,
+  "buy": 18.9464436,
+  "date": "2022-11-10 15:00:28",
+  "prev_buy": 20.04508701,
+  "prev_sell": 19.1235807
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.85378025,
-  "buy": 18.9773805,
-  "date": "2022-11-10 14:50:28",
+  "sell": 19.8416125,
+  "buy": 18.965846,
+  "date": "2022-11-10 15:00:28",
   "prev_buy": 20.0174825,
   "prev_sell": 19.13426925
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.85378025,
-  "buy": 18.9676734,
-  "date": "2022-11-10 14:50:29",
+  "sell": 19.8416125,
+  "buy": 18.9561448,
+  "date": "2022-11-10 15:00:29",
   "prev_buy": 20.0174825,
   "prev_sell": 19.1244819
 },{
