commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.74082275,
-  "buy": 19.01004,
-  "date": "2022-11-10 15:20:10",
-  "prev_buy": 19.931197,
-  "prev_sell": 19.194476
+  "sell": 19.726069,
+  "buy": 18.99534,
+  "date": "2022-11-10 15:30:10",
+  "prev_buy": 19.936488,
+  "prev_sell": 19.198886
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.64381625,
-  "buy": 19.10703,
-  "date": "2022-11-10 15:20:13",
-  "prev_buy": 19.83700125,
-  "prev_sell": 19.29615
+  "sell": 19.629135,
+  "buy": 19.092255,
+  "date": "2022-11-10 15:30:13",
+  "prev_buy": 19.83852,
+  "prev_sell": 19.2968395
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.789326,
-  "buy": 19.01004,
-  "date": "2022-11-10 15:20:15",
-  "prev_buy": 19.983942,
-  "prev_sell": 19.1982
+  "sell": 19.774536,
+  "buy": 18.99534,
+  "date": "2022-11-10 15:30:15",
+  "prev_buy": 19.984962,
+  "prev_sell": 19.198102
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8942,
-  "buy": 18.8837,
-  "date": "2022-11-10 15:20:16",
-  "prev_buy": 20.0975,
-  "prev_sell": 19.087
+  "sell": 19.8871,
+  "buy": 18.8766,
+  "date": "2022-11-10 15:30:16",
+  "prev_buy": 20.0991,
+  "prev_sell": 19.0886
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.7117208,
-  "buy": 18.903351,
-  "date": "2022-11-10 15:20:21",
-  "prev_buy": 19.9055736,
-  "prev_sell": 19.090455
+  "sell": 19.6969888,
+  "buy": 18.8887335,
+  "date": "2022-11-10 15:30:20",
+  "prev_buy": 19.9065896,
+  "prev_sell": 19.09035755
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.7505234,
-  "buy": 18.942147,
-  "date": "2022-11-10 15:20:21",
-  "prev_buy": 19.9447578,
-  "prev_sell": 19.129635
+  "sell": 19.7357624,
+  "buy": 18.9274995,
+  "date": "2022-11-10 15:30:21",
+  "prev_buy": 19.9457758,
+  "prev_sell": 19.12953735
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.76022405,
-  "buy": 18.767565,
-  "date": "2022-11-10 15:20:22",
-  "prev_buy": 19.95455385,
-  "prev_sell": 18.953325
+  "sell": 19.7454558,
+  "buy": 18.7530525,
+  "date": "2022-11-10 15:30:22",
+  "prev_buy": 19.95557235,
+  "prev_sell": 18.95322825
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.71948132,
-  "buy": 18.9634848,
-  "date": "2022-11-10 15:20:22",
-  "prev_buy": 19.91341044,
-  "prev_sell": 19.151184
+  "sell": 19.70474352,
+  "buy": 18.9488208,
+  "date": "2022-11-10 15:30:22",
+  "prev_buy": 19.91442684,
+  "prev_sell": 19.15108624
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.6341156,
-  "buy": 18.777264,
-  "date": "2022-11-10 15:20:23",
-  "prev_buy": 19.8272052,
-  "prev_sell": 18.96312
+  "sell": 19.6194416,
+  "buy": 18.762744,
+  "date": "2022-11-10 15:30:22",
+  "prev_buy": 19.8282172,
+  "prev_sell": 18.9630232
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.8087273,
-  "buy": 18.563886,
-  "date": "2022-11-10 15:20:24",
-  "prev_buy": 20.0035341,
-  "prev_sell": 18.74763
+  "sell": 19.7939228,
+  "buy": 18.549531,
+  "date": "2022-11-10 15:30:23",
+  "prev_buy": 20.0045551,
+  "prev_sell": 18.7475343
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.7699247,
-  "buy": 18.990642,
-  "date": "2022-11-10 15:20:25",
-  "prev_buy": 19.9643499,
-  "prev_sell": 19.17861
+  "sell": 19.7551492,
+  "buy": 18.975957,
+  "date": "2022-11-10 15:30:23",
+  "prev_buy": 19.9653689,
+  "prev_sell": 19.1785121
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.8863325,
-  "buy": 18.62208,
-  "date": "2022-11-10 15:20:25",
-  "prev_buy": 20.0819025,
-  "prev_sell": 18.8064
+  "sell": 19.87147,
+  "buy": 18.60768,
+  "date": "2022-11-10 15:30:24",
+  "prev_buy": 20.0829275,
+  "prev_sell": 18.806304
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.85626049,
-  "buy": 18.942147,
-  "date": "2022-11-10 15:20:26",
-  "prev_buy": 20.05153475,
-  "prev_sell": 19.129635
+  "sell": 19.84142046,
+  "buy": 18.9274995,
+  "date": "2022-11-10 15:30:25",
+  "prev_buy": 20.0525582,
+  "prev_sell": 19.12953735
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.83782925,
-  "buy": 18.961545,
-  "date": "2022-11-10 15:20:26",
-  "prev_buy": 20.03292225,
-  "prev_sell": 19.149225
+  "sell": 19.823003,
+  "buy": 18.9468825,
+  "date": "2022-11-10 15:30:26",
+  "prev_buy": 20.03394475,
+  "prev_sell": 19.14912725
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.83782925,
-  "buy": 18.951846,
-  "date": "2022-11-10 15:20:27",
-  "prev_buy": 20.03292225,
-  "prev_sell": 19.13943
+  "sell": 19.823003,
+  "buy": 18.937191,
+  "date": "2022-11-10 15:30:26",
+  "prev_buy": 20.03394475,
+  "prev_sell": 19.1393323
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
