--- a/indexRt.html
+++ b/indexRt.html
@@ -44951,6 +44951,10 @@
     {
       "Date": "2022-11-10 11:00",
       "Rate": "19.4164"
+    },
+    {
+      "Date": "2022-11-10 12:00",
+      "Rate": "19.3510"
     }
   ]
 }
