commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44955,6 +44955,10 @@
     {
       "Date": "2022-11-10 12:00",
       "Rate": "19.3510"
+    },
+    {
+      "Date": "2022-11-10 13:00",
+      "Rate": "19.3450"
     }
   ]
 }
