--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.6937125,
-  "buy": 18.95712,
-  "date": "2022-11-10 17:00:11",
-  "prev_buy": 19.92265,
-  "prev_sell": 19.1786
+  "sell": 19.71915,
+  "buy": 18.9777,
+  "date": "2022-11-10 17:10:11",
+  "prev_buy": 19.943,
+  "prev_sell": 19.1933
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.59217875,
-  "buy": 19.056795,
-  "date": "2022-11-10 16:50:14",
-  "prev_buy": 19.82475,
-  "prev_sell": 19.27645
+  "sell": 19.62225,
+  "buy": 19.074525,
+  "date": "2022-11-10 17:10:14",
+  "prev_buy": 19.845,
+  "prev_sell": 19.291225
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.7421,
-  "buy": 18.9581,
-  "date": "2022-11-10 17:00:15",
-  "prev_buy": 19.9716,
-  "prev_sell": 19.1786
+  "sell": 19.7676,
+  "buy": 18.9777,
+  "date": "2022-11-10 17:10:16",
+  "prev_buy": 19.992,
+  "prev_sell": 19.1933
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -108,16 +108,16 @@
   "sell": 20.22,
   "buy": 19.69,
   "date": "2022-11-10 17:00:16",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8554,
-  "buy": 18.8449,
-  "date": "2022-11-10 17:00:17",
-  "prev_buy": 20.0896,
-  "prev_sell": 19.0791
+  "sell": 19.851,
+  "buy": 18.842,
+  "date": "2022-11-10 17:10:17",
+  "prev_buy": 20.09,
+  "prev_sell": 19.074
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.66468,
-  "buy": 18.8517025,
-  "date": "2022-11-10 17:00:23",
-  "prev_buy": 19.89328,
-  "prev_sell": 19.070965
+  "sell": 19.69008,
+  "buy": 18.8711925,
+  "date": "2022-11-10 17:10:27",
+  "prev_buy": 19.9136,
+  "prev_sell": 19.0855825
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.70339,
-  "buy": 18.8903925,
-  "date": "2022-11-10 17:00:23",
-  "prev_buy": 19.93244,
-  "prev_sell": 19.110105
+  "sell": 19.72884,
+  "buy": 18.9099225,
+  "date": "2022-11-10 17:10:27",
+  "prev_buy": 19.9528,
+  "prev_sell": 19.1247525
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.7130675,
-  "buy": 18.7162875,
-  "date": "2022-11-10 17:00:24",
-  "prev_buy": 19.94223,
-  "prev_sell": 18.933975
+  "sell": 19.73853,
+  "buy": 18.7356375,
+  "date": "2022-11-10 17:10:27",
+  "prev_buy": 19.9626,
+  "prev_sell": 18.9484875
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.672422,
-  "buy": 18.911672,
-  "date": "2022-11-10 17:00:24",
-  "prev_buy": 19.901112,
-  "prev_sell": 19.131632
+  "sell": 19.697832,
+  "buy": 18.931224,
+  "date": "2022-11-10 17:10:28",
+  "prev_buy": 19.92144,
+  "prev_sell": 19.146296
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.58726,
-  "buy": 18.72596,
-  "date": "2022-11-10 17:00:25",
-  "prev_buy": 19.81496,
-  "prev_sell": 18.94376
+  "sell": 19.61256,
+  "buy": 18.74532,
+  "date": "2022-11-10 17:10:28",
+  "prev_buy": 19.8352,
+  "prev_sell": 18.95828
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.761455,
-  "buy": 18.513165,
-  "date": "2022-11-10 17:00:26",
-  "prev_buy": 19.99118,
-  "prev_sell": 18.72849
+  "sell": 19.78698,
+  "buy": 18.532305,
+  "date": "2022-11-10 17:10:29",
+  "prev_buy": 20.0116,
+  "prev_sell": 18.742845
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.722745,
-  "buy": 18.938755,
-  "date": "2022-11-10 17:00:26",
-  "prev_buy": 19.95202,
-  "prev_sell": 19.15903
+  "sell": 19.74822,
+  "buy": 18.958335,
+  "date": "2022-11-10 17:10:29",
+  "prev_buy": 19.9724,
+  "prev_sell": 19.173715
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.838875,
-  "buy": 18.5712,
-  "date": "2022-11-10 17:00:27",
-  "prev_buy": 20.0695,
-  "prev_sell": 18.7872
+  "sell": 19.8645,
+  "buy": 18.5904,
+  "date": "2022-11-10 17:10:30",
+  "prev_buy": 20.09,
+  "prev_sell": 18.8016
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.80887475,
-  "buy": 18.8903925,
-  "date": "2022-11-10 17:00:27",
-  "prev_buy": 20.039151,
-  "prev_sell": 19.110105
+  "sell": 19.834461,
+  "buy": 18.9099225,
+  "date": "2022-11-10 17:10:31",
+  "prev_buy": 20.05962,
+  "prev_sell": 19.1247525
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.7904875,
-  "buy": 18.9097375,
-  "date": "2022-11-10 17:00:28",
-  "prev_buy": 20.02055,
-  "prev_sell": 19.129675
+  "sell": 19.81605,
+  "buy": 18.9292875,
+  "date": "2022-11-10 17:10:31",
+  "prev_buy": 20.041,
+  "prev_sell": 19.1443375
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.7904875,
-  "buy": 18.900065,
-  "date": "2022-11-10 17:00:28",
-  "prev_buy": 20.02055,
-  "prev_sell": 19.11989
+  "sell": 19.81605,
+  "buy": 18.919605,
+  "date": "2022-11-10 17:10:32",
+  "prev_buy": 20.041,
+  "prev_sell": 19.134545
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
