commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -36,8 +36,8 @@
   "sell": 19.71915,
   "buy": 18.9777,
   "date": "2022-11-10 17:10:11",
-  "prev_buy": 19.943,
-  "prev_sell": 19.1933
+  "prev_buy": 19.93893,
+  "prev_sell": 19.17664
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -60,8 +60,8 @@
   "sell": 19.62225,
   "buy": 19.074525,
   "date": "2022-11-10 17:10:14",
-  "prev_buy": 19.845,
-  "prev_sell": 19.291225
+  "prev_buy": 19.84095,
+  "prev_sell": 19.27448
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -92,8 +92,8 @@
   "sell": 19.7676,
   "buy": 18.9777,
   "date": "2022-11-10 17:10:16",
-  "prev_buy": 19.992,
-  "prev_sell": 19.1933
+  "prev_buy": 19.98792,
+  "prev_sell": 19.17664
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.22,
-  "buy": 19.69,
-  "date": "2022-11-10 17:00:16",
-  "prev_buy": 20.22,
-  "prev_sell": 19.69
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-11-10 17:20:17",
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.851,
-  "buy": 18.842,
-  "date": "2022-11-10 17:10:17",
-  "prev_buy": 20.09,
-  "prev_sell": 19.074
+  "sell": 19.8356,
+  "buy": 18.8251,
+  "date": "2022-11-10 17:20:17",
+  "prev_buy": 20.0862,
+  "prev_sell": 19.0757
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -164,88 +164,88 @@
   "sell": 19.69008,
   "buy": 18.8711925,
   "date": "2022-11-10 17:10:27",
-  "prev_buy": 19.9136,
-  "prev_sell": 19.0855825
+  "prev_buy": 19.909536,
+  "prev_sell": 19.069016
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
   "sell": 19.72884,
   "buy": 18.9099225,
   "date": "2022-11-10 17:10:27",
-  "prev_buy": 19.9528,
-  "prev_sell": 19.1247525
+  "prev_buy": 19.948728,
+  "prev_sell": 19.108152
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
   "sell": 19.73853,
   "buy": 18.7356375,
   "date": "2022-11-10 17:10:27",
-  "prev_buy": 19.9626,
-  "prev_sell": 18.9484875
+  "prev_buy": 19.958526,
+  "prev_sell": 18.93204
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
   "sell": 19.697832,
   "buy": 18.931224,
   "date": "2022-11-10 17:10:28",
-  "prev_buy": 19.92144,
-  "prev_sell": 19.146296
+  "prev_buy": 19.9173744,
+  "prev_sell": 19.1296768
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
   "sell": 19.61256,
   "buy": 18.74532,
   "date": "2022-11-10 17:10:28",
-  "prev_buy": 19.8352,
-  "prev_sell": 18.95828
+  "prev_buy": 19.831152,
+  "prev_sell": 18.941824
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
   "sell": 19.78698,
   "buy": 18.532305,
   "date": "2022-11-10 17:10:29",
-  "prev_buy": 20.0116,
-  "prev_sell": 18.742845
+  "prev_buy": 20.007516,
+  "prev_sell": 18.726576
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
   "sell": 19.74822,
   "buy": 18.958335,
   "date": "2022-11-10 17:10:29",
-  "prev_buy": 19.9724,
-  "prev_sell": 19.173715
+  "prev_buy": 19.968324,
+  "prev_sell": 19.157072
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
   "sell": 19.8645,
   "buy": 18.5904,
   "date": "2022-11-10 17:10:30",
-  "prev_buy": 20.09,
-  "prev_sell": 18.8016
+  "prev_buy": 20.0859,
+  "prev_sell": 18.78528
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
   "sell": 19.834461,
   "buy": 18.9099225,
   "date": "2022-11-10 17:10:31",
-  "prev_buy": 20.05962,
-  "prev_sell": 19.1247525
+  "prev_buy": 20.0555262,
+  "prev_sell": 19.108152
 },{
   "bank_id": 30,
   "bank_name": "VISA",
   "sell": 19.81605,
   "buy": 18.9292875,
   "date": "2022-11-10 17:10:31",
-  "prev_buy": 20.041,
-  "prev_sell": 19.1443375
+  "prev_buy": 20.03691,
+  "prev_sell": 19.12772
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
   "sell": 19.81605,
   "buy": 18.919605,
   "date": "2022-11-10 17:10:32",
-  "prev_buy": 20.041,
-  "prev_sell": 19.134545
+  "prev_buy": 20.03691,
+  "prev_sell": 19.117936
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
