commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44959,6 +44959,10 @@
     {
       "Date": "2022-11-10 13:00",
       "Rate": "19.3450"
+    },
+    {
+      "Date": "2022-11-10 14:00",
+      "Rate": "19.3203"
     }
   ]
 }
