commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44963,6 +44963,10 @@
     {
       "Date": "2022-11-10 14:00",
       "Rate": "19.3203"
+    },
+    {
+      "Date": "2022-11-10 15:00",
+      "Rate": "19.3162"
     }
   ]
 }
