--- a/indexRt.html
+++ b/indexRt.html
@@ -44967,6 +44967,10 @@
     {
       "Date": "2022-11-10 15:00",
       "Rate": "19.3162"
+    },
+    {
+      "Date": "2022-11-10 16:00",
+      "Rate": "19.3182"
     }
   ]
 }
